--- a/login_UI_first_draft.html
+++ b/login_UI_first_draft.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login_UI_Tutorial</title>
-  <link rel="stylesheet" href="style.css"
+  <title>Login_UI</title>
+  <link rel="stylesheet" href="./style.css"
 </head>
 <body>
   <div class="background-container">
-    <div class="container">
+    <div class="container-fluid">
       <video autoplay muted loop id="bg-vid">
         <source src="explosion-vid.mp4" type="video/mp4">
       </video>
       <div class="login-box">
-        <button type="submit" name="login" id="login-button"></button>
+        <button type="submit" name="login" id="login-button">DO NOT<br>PRESS</button>
         <input type="text" name="username" id="username" placeholder="username">
         <input type="password" name="password" id="password" placeholder="password">
         
